# hw-6-backend-yersmad

./: README.md  pyproject.toml
app/: flowers_repository.py  main.py  users_repository.py
templates/: index.html
templates/flower/: add_flower.html  flowers.html
templates/user/: login.html  profile.html  signup.html
tests/: test_task1.py  test_task2.py  test_task3.py  test_task4.py
